# 2024_cagra_repro

./: .gitignore  Makefile  README.md  bench_plot.py  cuvs_sweep.py  run.sh
common/: cagra_build_kernels.cuh  cagra_common.cuh  cuda_utils.cuh
cuvs_bench/: CMakeLists.txt  cuvs_bench.cu
engineered/: config.cuh  engineered_build.cu  engineered_build.cuh  engineered_main.cu  engineered_plan.cu  engineered_plan.cuh  engineered_search.cu  engineered_search.cuh
plain/: config.cuh  plain_build.cu  plain_build.cuh  plain_main.cu  plain_search.cu  plain_search.cuh
report/: cagra_audit_report.md  cagra_repro_tests.md  cagra_source_map.md
